# 2026-github-copilot-dev-days-workshop

./: .gitattributes  .gitignore  README.md
.github/: copilot-instructions.md
.github/instructions/: coding-style-csharp.instructions.md  coding-style-markdown.instructions.md  cs-ai-agents.instructions.md  cs-aspire-apphost.instructions.md  cs-constants.instructions.md  cs-extension-methods.instructions.md  cs-object-calisthenics.instructions.md  cs-options-classes.instructions.md  cs-program.instructions.md  cs-service-implementation.instructions.md  wow-spec-driven-development.instructions.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
exercises/brownfield/python/: pyproject.toml
exercises/brownfield/python/notes_api/: __init__.py  __main__.py  app.py
exercises/brownfield/python/tests/: test_notes_api.py
exercises/extensions/my-ext/sample/python/: pyproject.toml
exercises/extensions/my-ext/sample/python/sample_greeter/: __init__.py  greeter.py
exercises/extensions/my-ext/sample/python/tests/: test_greeter.py
exercises/greenfield/python/: pyproject.toml
exercises/greenfield/python/tests/: test_todo_app.py
exercises/greenfield/python/todolite/: __init__.py  __main__.py  models.py  repository.py
materials/: 00-preparacion.md  01-introduccion.md  02-ejercicio-greenfield.md  03-extensiones-y-presets.md  04-ejercicio-brownfield.md  05-cierre.md  README.md  retrospectiva.md  troubleshooting.md
(+48 files in other folders)
