[project]
name = "notes-api"
version = "0.1.0"
description = "A minimal Notes API for the Spec Kit workshop brownfield exercise"
requires-python = ">=3.11"
dependencies = ["flask>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
