[project]
name = "todolite"
version = "0.1.0"
description = "A minimal to-do CLI application for the Spec Kit workshop"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
todolite = "todolite.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
